Fix content overflow

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -286,6 +286,7 @@ body {
 
         p {
             margin-bottom: 20px;
+            overflow-wrap: break-word;
         }
 
         a {
